@@ -36,6 +36,10 @@
 	* ldns-verify-zone NSEC3 checking from quadratic to linear performance.
 	  Thanks NIC MX (nicmexico.mx)
 	* ldns-dane setup new ssl session for each new connect to prevent hangs
+	* Parsing from and to wire and presentation format for draft rr types
+	  should be explicitely enabled with the --enable-draft-rrtypes option
+	  to conifigure. This applies to: NINFO, RKEY, CDS, EUI48, EUI64, URI
+	  and TA
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
